--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,7 +49,7 @@
                             <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                                 <ul class="navbar-nav">
                                     <li class="nav-item dropdown">
-                                        <a class="nav-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">                    Financeiro
+                                        <a class="nav-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Financeiro
                                         <span class="icon-arrow-down"></span>
                                         </a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -59,7 +59,7 @@
                                         </div>
                                     </li>
                                     <li class="nav-item dropdown">
-                                        <a class="nav-link" href="#" id="navbarDropdownMenuLink1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">                    Agronegócios
+                                        <a class="nav-link" href="#" id="navbarDropdownMenuLink1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Agronegócios
                                         <span class="icon-arrow-down"></span>
                                         </a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -74,9 +74,16 @@
                                     <li class="nav-item active">
                                         <a class="nav-link" href="#">Trading News</a>
                                     </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">Data Feed</a>
-                                    </li>
+                                    <li class="nav-item dropdown">
+                                            <a class="nav-link" href="#" id="navbarDropdownMenuLink1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Soluções
+                                            <span class="icon-arrow-down"></span>
+                                            </a>
+                                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                                <a class="dropdown-item" href="#">Data Feed</a>
+                                                <a class="dropdown-item" href="#">RI</a>
+                                                <a class="dropdown-item" href="#">Ticker</a>
+                                            </div>
+                                        </li>
                                     <li>
                                         <input type="text" placeholder="Search...">
                                         <div class="icon"></div>
