Atualização na bcpro.html

--- a/app/templates/bcpro.html
+++ b/app/templates/bcpro.html
@@ -92,7 +92,7 @@
                             <li>Broadcast TV</li>
                             <li>Relatórios de Research</li>
                             <li>Estadão (Economia, Jornal Digital)</li>
-                            <li>Contribuidores - Agência Bovespa, CETIP, STJ, PR Newswire, CNA/Senar, CEAGESP</li>
+                            <li>Contribuidores - Agência Bovespa, CETIP, STJ, PR Newswire, CEAGESP</li>
                             <li>Releases</li>
                           </ul>
                           <strong>Add-ons Disponíveis para Contratação</strong>
@@ -132,7 +132,7 @@
           <div class="card">
               <!-- Card header -->
               <div class="card-header" role="tab" id="headingConj">
-                <a id="pctConjutura" onclick="pctConjuntura()" class="collapsed" data-toggle="collapse" data-parent="#accordionPacotes" href="#collapseConj" aria-expanded="false" aria-controls="collapseConj">
+                <a id="pctConjuntura" onclick="pctConjuntura()" data-toggle="collapse" data-parent="#accordionPacotes" href="#collapseConj">
                   <h6 class="mb-0">
                     Broadcast Conjuntura <span style="float: right"> R$460</span><i id="iconConjuntura" class="fa fa-angle-down"></i>
                   </h6>
