Implementação do uso dos checboxs

--- a/app/templates/ppp.html
+++ b/app/templates/ppp.html
@@ -20,7 +20,7 @@
                                 <img src="../static/img/LOGO-BC-Financeiro.png">
                         </div>
                     </div>
-                    <div class="col-2 nprint">        
+                    <div class="col-2 nprint">
                         <div class="form-group">
                             <label for="selectPlataforma">Selecione a Plataforma</label>
                             <select class="form-control" id="selectPlataforma">
@@ -134,8 +134,7 @@
                     <div class="row align-items-center destacar">
                         <div class="col-4  n2"><a href="{{url_for('noticiosos')}}" data-placement="right" data-toggle="tooltip" data-html="true" title="Noticiário em <b>Tempo Real</b> acompanhado das 10 notícias mais importantes do momento, cobrindo os principais centros financeiros com os números e notícias das principais economias e empresas, além dos desdobramentos dos mercados internacionais e seus impactos no mercado local.">AE News + Top News</a> <!--i class="fas fa-info-circle nprint"></i--></div>
                         <div class="col"  id="n-aenews-trade"><i class="fas fa-times"></i></div>
-                        <div class="col"  id="n-aenews-conjuntu
-                        ra"><i class="fas fa-times"></i></div>
+                        <div class="col"  id="n-aenews-conjuntura"><i class="fas fa-times"></i></div>
                         <div class="col"  id="n-aenews-mercados"><i class="fas fa-times"></i></div>
                         <div class="col"  id="n-aenews-news"><i class="fas fa-check"></i></div>
                         <div class="col"  id="n-aenews-analises"><i class="fas fa-check"></i></div>
@@ -968,17 +967,17 @@
                                 <div class="col"  id="c-ctbd-rfixa-trade"><i class="fas fa-times"></i></div>
                                 <div class="col"  id="c-ctbd-rfixa-conjuntura"><i class="fas fa-times"></i></div>
                                 <div class="col"  id="c-ctbd-rfixa-mercados"><i class="fas fa-check"></i></div>
-                                <div class="col"  id="c-ctbd-cambio-news"><i class="fas fa-check"></i></div>
+                                <div class="col"  id="c-ctbd-rfixa-news"><i class="fas fa-check"></i></div>
                                 <div class="col"  id="c-ctbd-rfixa-analises"><i class="fas fa-check"></i></div>
                             </div>
                             <!--Indicadores-->
                             <div class="row align-items-center destacar">
                                 <div class="col-4  n3" title="Indicadores de Agrícolas, Fundos e Inflação">Indicadores</div>
-                                <div class="col"  id="c-ctbd-rfixa-trade"><i class="fas fa-times"></i></div>
-                                <div class="col"  id="c-ctbd-rfixa-conjuntura"><i class="fas fa-times"></i></div>
-                                <div class="col"  id="c-ctbd-rfixa-mercados"><i class="fas fa-check"></i></div>
-                                <div class="col"  id="c-ctbd-cambio-news"><i class="fas fa-check"></i></div>
-                                <div class="col"  id="c-ctbd-rfixa-analises"><i class="fas fa-check"></i></div>
+                                <div class="col"  id="c-ctbd-ind-trade"><i class="fas fa-times"></i></div>
+                                <div class="col"  id="c-ctbd-ind-conjuntura"><i class="fas fa-times"></i></div>
+                                <div class="col"  id="c-ctbd-ind-mercados"><i class="fas fa-check"></i></div>
+                                <div class="col"  id="c-ctbd-ind-news"><i class="fas fa-check"></i></div>
+                                <div class="col"  id="c-ctbd-ind-analises"><i class="fas fa-check"></i></div>
                             </div>
                         </div>
                     </div>
@@ -990,19 +989,19 @@
         <!--Inicio do Conteúdos Adicionais Pagos #  Cabeçalho-->
         <div class="container-fluid" id="cont-adc-pago">
             <div class="row align-items-center" id="valores2" style="border-bottom: 1px solid white" >
-                <div class="col"  id="trade-valor"><b></b></div>
-                <div class="col"  id="conjuntura-valor"><b></b></div>
-                <div class="col"  id="mercados-valor"><b></b></div>
-                <div class="col"  id="news-valor"><b></b></div>
-                <div class="col"  id="analises-valor"><b></b></div>
+                <div class="col"  id="trade-valor-2"><b></b></div>
+                <div class="col"  id="conjuntura-valor-2"><b></b></div>
+                <div class="col"  id="mercados-valor-2"><b></b></div>
+                <div class="col"  id="news-valor-2"><b></b></div>
+                <div class="col"  id="analises-valor-2"><b></b></div>
             </div>
             <div class="row align-items-center titulo-tabela">
                 <div class="col-4" style="font-size: 18px;"><b>Conteúdos Pagos</b></div>
-                <div class="col"  id="trade-lb"><b>Trade</b></div>
-                <div class="col"  id="conjuntura-lb"><b>Conjuntura</b></div>
-                <div class="col"  id="mercados-lb"><b>Mercados</b></div>
-                <div class="col"  id="news-lb"><b>News</b></div>
-                <div class="col"  id="analises-lb"><b>Análises</b></div>
+                <div class="col"  id="trade-lb-2"><b>Trade</b></div>
+                <div class="col"  id="conjuntura-lb-2"><b>Conjuntura</b></div>
+                <div class="col"  id="mercados-lb-2"><b>Mercados</b></div>
+                <div class="col"  id="news-lb-2"><b>News</b></div>
+                <div class="col"  id="analises-lb-2"><b>Análises</b></div>
             </div>
         </div>
 
@@ -1106,11 +1105,11 @@
                                     <b>Custo:</b> R$250,00</br>
                                     <b>Demonstração: Não Disponível"></i>
                                 </div>
-                                <div class="col"  id="ad-mod-af-capabefech-trade"><i class="fas fa-times"></i></div>
-                                <div class="col"  id="ad-mod-af-capabefech-conjuntura"><i class="fas fa-times"></i></div>
-                                <div class="col"  id="ad-mod-af-capabefech-mercados"><i class="fas fa-times"></i></div>
-                                <div class="col"  id="ad-mod-af-capabefech-news"><i class="fas fa-times"></i></div>
-                                <div class="col"  id="ad-mod-af-capabefech-analises"><i class="fas fa-plus"></i></div>
+                                <div class="col"  id="ad-mod-af-capfech-trade"><i class="fas fa-times"></i></div>
+                                <div class="col"  id="ad-mod-af-capfech-conjuntura"><i class="fas fa-times"></i></div>
+                                <div class="col"  id="ad-mod-af-capfech-mercados"><i class="fas fa-times"></i></div>
+                                <div class="col"  id="ad-mod-af-capfech-news"><i class="fas fa-times"></i></div>
+                                <div class="col"  id="ad-mod-af-capfech-analises"><i class="fas fa-plus"></i></div>
                             </div>
                         </div>
                     </div>
@@ -1124,11 +1123,11 @@
                             <b>Custo:</b> R$425,00</br>
                             <b>Demonstração: 15 dias"></i>
                         </div>
-                        <div class="col"  id="ad-mod-pol-trade"><i class="fas fa-plus"></i></div>
-                        <div class="col"  id="ad-mod-pol-conjuntura"><i class="fas fa-plus"></i></div>
-                        <div class="col"  id="ad-mod-pol-mercados"><i class="fas fa-plus"></i></div>
-                        <div class="col"  id="ad-mod-pol-news"><i class="fas fa-plus"></i></div>
-                        <div class="col"  id="ad-mod-pol-analises"><i class="fas fa-plus"></i></div>
+                        <div class="col"  id="ad-mod-dt-trade"><i class="fas fa-plus"></i></div>
+                        <div class="col"  id="ad-mod-dt-conjuntura"><i class="fas fa-plus"></i></div>
+                        <div class="col"  id="ad-mod-dt-mercados"><i class="fas fa-plus"></i></div>
+                        <div class="col"  id="ad-mod-dt-news"><i class="fas fa-plus"></i></div>
+                        <div class="col"  id="ad-mod-dt-analises"><i class="fas fa-plus"></i></div>
                     </div>
                     <!--Fundos de Investimentos-->
                     <div class="row align-items-center destacar">
@@ -1141,11 +1140,11 @@
                             <b>Custo:</b> R$341,00</br>
                             <b>Demonstração: 30 dias"></i>
                         </div>
-                        <div class="col"  id="ad-mod-pol-trade"><i class="fas fa-plus"></i></div>
-                        <div class="col"  id="ad-mod-pol-conjuntura"><i class="fas fa-plus"></i></div>
-                        <div class="col"  id="ad-mod-pol-mercados"><i class="fas fa-plus"></i></div>
-                        <div class="col"  id="ad-mod-pol-news"><i class="fas fa-plus"></i></div>
-                        <div class="col"  id="ad-mod-pol-analises"><i class="fas fa-check"></i></div>
+                        <div class="col"  id="ad-mod-fi-trade"><i class="fas fa-plus"></i></div>
+                        <div class="col"  id="ad-mod-fi-conjuntura"><i class="fas fa-plus"></i></div>
+                        <div class="col"  id="ad-mod-fi-mercados"><i class="fas fa-plus"></i></div>
+                        <div class="col"  id="ad-mod-fi-news"><i class="fas fa-plus"></i></div>
+                        <div class="col"  id="ad-mod-fi-analises"><i class="fas fa-check"></i></div>
                     </div>
                 </div>   
             </div>
@@ -1563,8 +1562,7 @@
                                         <div class="col"  id="ad-c-ind-euro-euronext-trade"><i class="fas fa-plus"></i></div>
                                         <div class="col"  id="ad-c-ind-euro-euronext-conjuntura"><i class="fas fa-plus"></i></div>
                                         <div class="col"  id="ad-c-ind-euro-euronext-mercados"><i class="fas fa-plus"></i></div>
-                                        <div class="col"  id="c-i
-                                        nd-euro-euronext-news"><i class="fas fa-plus"></i></div>
+                                        <div class="col"  id="ad-c-ind-euro-euronext-news"><i class="fas fa-plus"></i></div>
                                         <div class="col"  id="ad-c-ind-euro-euronext-analises"><i class="fas fa-plus"></i></div>
                                     </div>
                                     <!--Madrid - IBEX Indice-->
@@ -1648,7 +1646,6 @@
                                     <div class="row align-items-center destacar">
                                         <div class="col-4  n4">
                                             S&P Indices 
-                                            <i class="far fa-clock"></i> 
                                             <div class="realtime nprint" data-placement="right" data-toggle="tooltip" data-html="true" title="
                                             <b>Cód. Serv:</b> BC-2228</br>
                                             <b>Fee:</b> U$4,89</br>
@@ -1707,12 +1704,11 @@
                             <b>Fee:</b> US$141,05</br>
                             <b>Demonstração: 30 dias"><b>RT</b></div>
                         </div>
-                        <div class="col"  id="ad-c-latibex-trade"><i class="fas fa-plus"></i></div>
-                        <div class
-                        ="col"  id="ad-c-latibex-conjuntura"><i class="fas fa-plus"></i></div>
-                        <div class="col"  id="ad-c-latibex-mercados"><i class="fas fa-plus"></i></div>
-                        <div class="col"  id="ad-c-latibex-news"><i class="fas fa-plus"></i></div>
-                        <div class="col"  id="ad-c-latibex-analises"><i class="fas fa-plus"></i></div>
+                        <div class="col"  id="ad-c-lme-trade"><i class="fas fa-plus"></i></div>
+                        <div class="col"  id="ad-c-lme-conjuntura"><i class="fas fa-plus"></i></div>
+                        <div class="col"  id="ad-c-lme-mercados"><i class="fas fa-plus"></i></div>
+                        <div class="col"  id="ad-c-lme-news"><i class="fas fa-plus"></i></div>
+                        <div class="col"  id="ad-c-lme-analises"><i class="fas fa-plus"></i></div>
                     </div>
                     <!--Markit CDS - Soberando Corporativo-->
                     <div class="row align-items-center destacar">
@@ -1810,5 +1806,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script type="text/javascript" src="../static/js/ppp.js"></script>
+<script type="text/javascript" src="../static/js/ppp2.js"></script>
 
 {%endblock%}
