--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -192,6 +192,124 @@
             </div-->
         </div>
     </section>
+    <!--============================= FIND PLACES =============================-->
+    <section class="main-block">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-5">
+                        <div class="styled-heading">
+                            <h3>FAQ</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <ul>
+                        <li>
+                            <h6>Quais as novidades da versão do Broadcast+?</h6>
+                        </li>
+                        <li>
+                            <h6>Quais fontes de cotações fazem parte do Broadcast+?</h6>
+                        </li>
+                        <li>
+                            <h6>Quais as principais formas de entrega de conteúdo?</h6>
+                        </li>
+                        <li>
+                            <h6>Quais os tipos de contribuição e como ser contribuidor das plataformas Broadcast?</h6>
+                        </li>
+                        
+                    </ul>
+                    
+                </div>
+                
+                <!--div class="row">
+                    <div class="col-md-4">
+                        <div class="find-place-img_wrap">
+                            <div class="grid">
+                                <figure class="effect-ruby">
+                                    <a href="{{url_for('ppp')}}">
+                                    <img src="../static/images/Screenshot_1.png"  alt="img13" />
+                                    <figcaption>
+                                        <h5>Comparador de Pacotes</h5>
+                                    </figcaption>
+                                    </a>
+                                </figure>
+    
+                            </div>
+    
+                        </div>
+                        
+                    </div>
+                    <div class="col-md-4">
+                        <div class="row find-img-align">
+                            <div class="col-md-12">
+                                <div class="find-place-img_wrap">
+                                    <div class="grid">
+                                        <figure class="effect-ruby">
+                                            <a href="{{url_for('noticiosos')}}">
+                                            
+                                            <img src="../static/images/find-place2.jpg" class="img-fluid" alt="img13" />
+                                            <figcaption>
+                                                <h5>Notíciosos</h5>
+                                            </figcaption>
+                                        </figure>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="find-place-img_wrap">
+                                    <div class="grid">
+                                        <figure class="effect-ruby">
+                                            <a href="#">
+                                            
+                                            <img src="{{url_for('static', filename='images/find-place3.jpg')}}" class="img-fluid" alt="img13" />
+                                            <figcaption>
+                                                <h5>Cotações</h5>
+                                                
+                                            </figcaption>
+                                                </a>
+                                        </figure>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="row find-img-align">
+                            <div class="col-md-12">
+                                <div class="find-place-img_wrap">
+                                    <div class="grid">
+                                        <figure class="effect-ruby">
+                                            <img src="{{url_for('static', filename='images/find-place4.jpg')}}" class="img-fluid" alt="img13" />
+                                            <figcaption>
+                                                <h5>Ferramentas</h5>
+                                            </figcaption>
+                                        </figure>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="find-place-img_wrap">
+                                    <div class="grid">
+                                        <figure class="effect-ruby">
+                                            <img src="{{url_for('static', filename='images/find-place5.jpg')}}" class="img-fluid" alt="img13" />
+                                            <figcaption>
+                                                <h5>Outros</h5>
+                                                <p>79 Listings</p>
+                                            </figcaption>
+                                        </figure>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div-->
+            </div>
+        </section>
 {% endblock %}
 
 
