--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -35,7 +35,7 @@
 		{%block nav %}
 		 <div class="nav-menu">
         <div class="bg transition">
-            <div class="container-fluid fixed">
+            <div class="container-fluid fixed is-sticky">
                 <div class="row">
                     <div class="col-md-12">
                         <nav class="navbar navbar-expand-lg navbar-light">
@@ -136,21 +136,6 @@
 		<script src="../static/js/popper.min.js"></script>
         <script src="../static/js/busca.js"></script>
 
-		<script>
-			$(window).scroll(function() {
-				// 100 = The point you would like to fade the nav in.
-
-				if ($(window).scrollTop() > 100) {
-
-					$('.fixed').addClass('is-sticky');
-
-				} else {
-
-					$('.fixed').removeClass('is-sticky');
-
-				};
-			});
-		</script>
 {%endblock%}
 	</body>
 <html>
