--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -65,12 +65,12 @@
                     </a>
                 </div>
                 <div class="col-3">
-                    <a href="#">
+                    <a href="#" style="color:dimgray">
                         <i class="fas fa-chart-line iconmenu1"></i>
                     </a>
                 </div>
                 <div class="col-3">
-                    <a href="#">
+                    <a href="#" style="color:dimgray">
                         <i class="fas fa-tools iconmenu2"></i>
                     </a>
                 </div>
